# taqueria

./: Cargo.toml  config.json
src/: broker.rs  command.rs  config.rs  event.rs  lib.rs  main.rs  metadata.rs  notifier.rs  recipe.rs
src/broker/: redis.rs
src/notifier/: console.rs
src/recipe/: carne_asade.rs  null.rs
workflows/: rust.yml
