[package]
name = "taqueria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
redis = "0.23.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
tempfile = "3"
