[package]
name = "taqueria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
